--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-		<script src="gsap.min.js"></script>
-		<script src="animate.js"></script>
-		<script src="4thkind.js"></script>
+		<script src="js/gsap.min.js"></script>
+		<script src="js/animate.js"></script>
+		<script src="js/4thkind.js"></script>
 
 	</body>
 </html>
