--- a/photo.html
+++ b/photo.html
@@ -71,8 +71,8 @@
 	<p>+34 672 13 77 48</p>
 </footer>
 
-		<script src="gsap.min.js"></script>
-		<script src="4thkind.js"></script>
+		<script src="js/gsap.min.js"></script>
+		<script src="js/4thkind.js"></script>
 		<!-- Swiper JS -->
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
