--- a/video.html
+++ b/video.html
@@ -49,8 +49,8 @@
 	<p>+34 672 13 77 48</p>
 </footer>
 
-		<script src="gsap.min.js"></script>
-		<script src="4thkind.js"></script>
+		<script src="js/gsap.min.js"></script>
+		<script src="js/4thkind.js"></script>
 
 	</body>
 </html>
