added links to contact page

--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,9 @@
 <main id="contact">
 <div class="contact-details">
 <ul>
-<li>+34 672137748</li>
-<li>miki@mikipowell.com</li>
-<li>@c4l4m4r</li>
+<li><a href="tel:672137748">+34 672137748</a></li>
+<li><a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki@mikipowell.com</a></li>
+<li><a href="https://www.instagram.com/c4l4m4r/">@c4l4m4r</a></li>
 </ul>
 </div>
 <div class="img">
