page transitions added

--- a/index.html
+++ b/index.html
@@ -40,15 +40,23 @@
 
 
 
-<main id="index" class="animate">
+<main id="index" class="animate" data-barba="wrapper">
+<section data-barba="container">
+	<img src="hero.png" class="full full-img">
+</section>
 </main>
 
 <footer>
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
+		<script src="js/barba.js"></script>
+		<script src="js/barba-css.js"></script>
+
 		<script src="js/gsap.min.js"></script>
 		<script src="js/animate.js"></script>
+
+
 		<script src="js/4thkind.js"></script>
 
 	</body>
