--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 			<div class="internal">
 				<a href="photo.html">Photo</a>
 				<a href="video.html">Video</a>
-				<a href="contact.html">Contact</a>
+				<a href="contact.html" class="selected">Contact</a>
 			</div>
 		</nav>
 
@@ -38,7 +38,8 @@
 
 
 
-<main id="contact">
+<main data-barba="wrapper">
+<section data-barba="container" data-barba-namespace="contact" class="contact" >
 <div class="contact-details">
 <ul>
 <li><a href="tel:672137748">+34 672137748</a></li>
@@ -49,14 +50,17 @@
 <div class="img">
 		<img src="img/contact.png" class="animate"/>
 </div>
+</section>
 </main>
 
 <footer>
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-
+		<script src="js/barba.js"></script>
+		<script src="js/barba-css.js"></script>
 		<script src="js/gsap.min.js"></script>
+
 		<script src="js/4thkind.js"></script>
 
 	</body>
