--- a/photo.html
+++ b/photo.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="_base.css">
 		<link rel="stylesheet" href="_fonts.css">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+		<link rel="stylesheet" href="swiper-bundle.min.css">
 		<link rel="icon" type="image/png" href="img/icon.png">
 	</head>
 	<body>
@@ -30,7 +30,7 @@
 
 		<nav>
 			<div class="internal">
-				<a href="photo.html">Photo</a>
+				<a href="photo.html" class="selected">Photo</a>
 				<a href="video.html">Video</a>
 				<a href="contact.html">Contact</a>
 			</div>
@@ -38,7 +38,8 @@
 
 </header>
 
-<main id="photo">
+<main data-barba="wrapper">
+<section class="photo" data-barba="container" data-barba-namespace="photo">
 <div class="series">
 	<ul>
 	<li><a href="#">doble </a></li>
@@ -64,8 +65,8 @@
 			 <!-- Add Pagination -->
 			 <div class="swiper-button-next"></div>
 		 	<div class="swiper-button-prev"></div>
-
 	 </div>
+ </section>
 </main>
 
 <footer>
@@ -73,27 +74,29 @@
 	<p>+34 672 13 77 48</p>
 </footer>
 
-		<script src="js/gsap.min.js"></script>
-		<script src="js/4thkind.js"></script>
+		<script src="js/barba.js"></script>
+		<script src="js/barba-css.js"></script>
 		<!-- Swiper JS -->
-		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-		<!-- Initialize Swiper -->
+		<script src="js/swiper-bundle.min.js"></script>
 		<script>
 		var swiper = new Swiper('.swiper-container', {
-		loop: true,
-		speed: 900,
-    spaceBetween: 100,
-		fadeEffect: {
-    crossFade: true
-  		},
-		 navigation: {
-			 nextEl: '.swiper-button-next',
-			 prevEl: '.swiper-button-prev',
+				loop: true,
+				speed: 900,
+				spaceBetween: 100,
+				fadeEffect: {
+				crossFade: true
+				},
 
-		 },
-	 });
+				navigation: {
+				 nextEl: '.swiper-button-next',
+				 prevEl: '.swiper-button-prev',
+			},
+		});
 		</script>
+
+		<script src="js/gsap.min.js"></script>
+
+		<script src="js/4thkind.js"></script>
 
 	</body>
 </html>
