--- a/video.html
+++ b/video.html
@@ -29,7 +29,7 @@
 		<nav>
 			<div class="internal">
 				<a href="photo.html">Photo</a>
-				<a href="video.html">Video</a>
+				<a href="video.html" class="selected">Video</a>
 				<a href="contact.html">Contact</a>
 			</div>
 		</nav>
@@ -38,8 +38,8 @@
 
 
 
-<main id="video">
-	<div class="vid">
+<main id="video" data-barba="wrapper">
+	<div class="vid" data-barba="container">
 		<iframe title="mulatu" src="https://player.vimeo.com/video/392609212?portrait=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" samesite="None" secure="true" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"></iframe>
 	</div>
 </main>
@@ -49,6 +49,8 @@
 	<p>+34 672 13 77 48</p>
 </footer>
 
+		<script src="js/barba.js"></script>
+		<script src="js/barba-css.js"></script>
 		<script src="js/gsap.min.js"></script>
 		<script src="js/4thkind.js"></script>
 
