script tag edited

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
 
 <main data-barba="wrapper">
-<section data-barba="container" data-barba-namespace="contact" class="contact" >
+<section data-barba="container" data-barba-namespace="contact" class="contact">
 <div class="contact-details">
 <ul>
 <li><a href="tel:672137748">+34 672137748</a></li>
@@ -61,7 +61,7 @@
 		<script src="js/barba-css.js"></script>
 		<script src="js/gsap.min.js"></script>
 
-		<script src="js/4thkind.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
