--- a/photo.html
+++ b/photo.html
@@ -39,7 +39,7 @@
 </header>
 
 <main data-barba="wrapper">
-<section class="photo" data-barba="container" data-barba-namespace="photo">
+<section data-barba="container" data-barba-namespace="photo" class="photo">
 <div class="series">
 	<ul>
 	<li><a href="#">doble </a></li>
@@ -96,7 +96,7 @@
 
 		<script src="js/gsap.min.js"></script>
 
-		<script src="js/4thkind.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
