--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<script src="js/animate.js"></script>
 
 
-		<script src="js/4thkind.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
