--- a/video.html
+++ b/video.html
@@ -52,7 +52,7 @@
 		<script src="js/barba.js"></script>
 		<script src="js/barba-css.js"></script>
 		<script src="js/gsap.min.js"></script>
-		<script src="js/4thkind.js"></script>
+		<script src="js/script.js"></script>
 
 	</body>
 </html>
