menu + contentful added

--- a/photo.html
+++ b/photo.html
@@ -65,7 +65,7 @@
 			 <!-- Add Pagination -->
 			 <div class="swiper-button-next"></div>
 		 	<div class="swiper-button-prev"></div>
-	 </div>
+	 <!-- </div> -->
  </section>
 </main>
 
@@ -93,6 +93,7 @@
 			},
 		});
 		</script>
+		<!-- <script src="js/contentful.js"> </script> -->
 
 		<script src="js/gsap.min.js"></script>
 
