barba for slider page

--- a/photo.html
+++ b/photo.html
@@ -42,10 +42,10 @@
 <section data-barba="container" data-barba-namespace="photo" class="photo">
 <div class="series">
 	<ul>
-	<li><a href="#">doble </a></li>
-	<li><a href="#">water </a></li>
-	<li><a href="#">sillas </a></li>
-	<li><a href="#">around </a></li>
+	<li><a href="doble.html">doble </a></li>
+	<li><a href="water.html">water </a></li>
+	<li><a href="sillas.html">sillas </a></li>
+	<li><a href="around.html">around </a></li>
 	</ul>
 </div>
 <!-- Swiper -->
