--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="_base.css">
 		<link rel="stylesheet" href="_fonts.css">
 		<link rel="stylesheet" href="style.css">
-
+		<link rel="stylesheet" href="swiper-bundle.min.css">
 		<link rel="icon" type="image/png" href="img/icon.png">
 	</head>
 	<body>
