--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 		<nav>
 			<div class="internal">
-				<a href="photo.html">Photo</a>
-				<a href="video.html">Video</a>
-				<a href="contact.html">Contact</a>
+				<a href="/photo.html">Photo</a>
+				<a href="/video.html">Video</a>
+				<a href="/contact.html">Contact</a>
 			</div>
 		</nav>
 
@@ -50,13 +50,8 @@
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-		<script src="js/barba.js"></script>
-		<script src="js/barba-css.js"></script>
-
 		<script src="js/gsap.min.js"></script>
 		<script src="js/animate.js"></script>
-
-
 		<script src="js/script.js"></script>
 
 	</body>
