--- a/video.html
+++ b/video.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="_base.css">
 		<link rel="stylesheet" href="_fonts.css">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="swiper-bundle.min.css">
 		<link rel="icon" type="image/png" href="img/icon.png">
 	</head>
 	<body>
@@ -29,9 +28,9 @@
 
 		<nav>
 			<div class="internal">
-				<a href="photo.html">Photo</a>
-				<a href="video.html" class="selected">Video</a>
-				<a href="contact.html">Contact</a>
+				<a href="/photo.html">Photo</a>
+				<a href="/video.html" class="selected">Video</a>
+				<a href="/contact.html">Contact</a>
 			</div>
 		</nav>
 
@@ -49,9 +48,6 @@
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-
-		<script src="js/barba.js"></script>
-		<script src="js/barba-css.js"></script>
 		<script src="js/gsap.min.js"></script>
 		<script src="js/script.js"></script>
 
