--- a/cms/www/index.html
+++ b/cms/www/index.html
@@ -6,16 +6,17 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Miki Powell | photographer and videographer </title>
-		<link rel="stylesheet" href="_base.css">
-		<link rel="stylesheet" href="_fonts.css">
-		<link rel="stylesheet" href="style.css">
-		<link rel="icon" type="image/png" href="img/icon.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+	  <link rel="stylesheet" type="text/css" href="/stylesheets/site.css">
+		<link rel="icon" type="image/png" href="images/icon.png">
 	</head>
 	<body>
 <header>
 	<a href="index.html">
 	<h1>	Miki Powell	</h1>
 	</a>
+
 
 <a href="#" class="menu-toggle">
 	<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -30,7 +31,7 @@
 			<div class="internal">
 				<a href="/photo.html">Photo</a>
 				<a href="/video.html">Video</a>
-				<a href="/contact.html" class="selected">Contact</a>
+				<a href="/contact.html">Contact</a>
 			</div>
 		</nav>
 
@@ -38,27 +39,22 @@
 
 
 
-<main data-barba="wrapper">
-<section data-barba="container" data-barba-namespace="contact" class="contact">
-<div class="contact-details">
-<ul>
-<li><a href="tel:672137748">+34 672137748</a></li>
-<li><a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki@mikipowell.com</a></li>
-<li><a href="https://www.instagram.com/c4l4m4r/">@c4l4m4r</a></li>
-</ul>
-</div>
-<div class="img">
-		<img src="img/contact.png" class="animate"/>
-</div>
+<main id="index" class="fade">
+{{#section hero}}
+<section>
+	<img src={{photo type=image tag=false alt="hero"}} class="full full-img" loading="lazy">
 </section>
+{{/section}}
 </main>
+
 
 <footer>
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-		<script src="js/gsap.min.js"></script>
-		<script src="js/script.js"></script>
+		<script src="/javascripts/gsap.min.js"></script>
+		<script src="/javascripts/animate.js"></script>
+		<script src="/javascripts/script.js"></script>
 
 	</body>
 </html>
