--- a/cms/www/video.html
+++ b/cms/www/video.html
@@ -6,18 +6,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Miki Powell | photographer and videographer </title>
-		<link rel="stylesheet" href="_base.css">
-		<link rel="stylesheet" href="_fonts.css">
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="swiper-bundle.min.css">
-		<link rel="icon" type="image/png" href="img/icon.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="/stylesheets/site.css">
+		<link rel="icon" type="image/png" href="images/icon.png">
 	</head>
 	<body>
 <header>
 	<a href="index.html">
 	<h1>	Miki Powell	</h1>
 	</a>
-
 
 <a href="#" class="menu-toggle">
 	<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -31,7 +29,7 @@
 		<nav>
 			<div class="internal">
 				<a href="/photo.html">Photo</a>
-				<a href="/video.html">Video</a>
+				<a href="/video.html" class="selected">Video</a>
 				<a href="/contact.html">Contact</a>
 			</div>
 		</nav>
@@ -40,19 +38,19 @@
 
 
 
-<main id="index" class="animate" data-barba="wrapper">
-<section data-barba="container">
-	<img src="hero.png" class="full full-img">
-</section>
+<main id="video">
+
+	<div class="vid" data-barba="container">
+		<iframe title="mulatu" loading="lazy" src={{link}} frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" samesite="None" secure="true" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; "></iframe>
+	</div>
 </main>
 
 <footer>
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
 	<p>+34 672 13 77 48</p>
 </footer>
-		<script src="js/gsap.min.js"></script>
-		<script src="js/animate.js"></script>
-		<script src="js/script.js"></script>
+		<script src="javascripts/gsap.min.js"></script>
+		<script src="javascripts/script.js"></script>
 
 	</body>
 </html>
