--- a/cms/www/video.html
+++ b/cms/www/video.html
@@ -39,11 +39,14 @@
 
 
 <main id="video">
-
-	<div class="vid" data-barba="container">
-		<iframe title="mulatu" loading="lazy" src={{link}} frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" samesite="None" secure="true" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; "></iframe>
-	</div>
+	 {{#section video multiple=false}}
+			<div class="vid" data-barba="container">
+				<iframe title="mulatu" loading="lazy" src={{link}} frameborder="0" allow="autoplay; fullscreen" allowfullscreen="" samesite="None" secure="true" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; "></iframe>
+			</div>
+	{{/section}}
 </main>
+
+
 
 <footer>
 	<a href="mailto:miki.opowell@gmail.com?subject=Hello%20there">miki.opowell@gmail.com</a>
